--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-money-management",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -10,16 +10,22 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^5.22.0",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "dayjs": "^1.11.13",
     "iron-session": "^8.0.4",
     "next": "^15",
     "next-intl": "^3.25.1",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-datepicker-react": "^1.4.3"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.9",
