Google Vision 오류 핫픽스
API KEY에서 AUTH 인증방식으로 시도중

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@heroicons/react": "^2.2.0",
     "@prisma/client": "^5.22.0",
     "@types/bcrypt": "^5.0.2",
+    "@vercel/functions": "^1.5.2",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
+    "google-auth-library": "^9.15.0",
     "iron-session": "^8.0.4",
     "next": "^15",
     "next-intl": "^3.25.1",
